TEST_PROGRAMS/INVALID/luke_emery-fertitta/scan_quotes.min
# scanning error example - unmatched quotes

var x: string;

x = "this string is not closed;

print x;
